css overflow fixed

--- a/assets/scss/design.scss
+++ b/assets/scss/design.scss
@@ -1,7 +1,7 @@
 @import url("https://use.typekit.net/jcw1gwz.css");
 body {
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   margin: 0;
   overflow-x: hidden;
